classDiagram

class Vehiculo {
    -string placa
    -number capacidadKg
    +obtenerDatos() string
}

class Etiqueta {
    -string codigoBarras
    -boolean esFragil
    +obtenerAdvertencia() string
}

class Paquete {
    -string destinatario
    -string direccion
    -Etiqueta etiqueta
    +mostrarGuia() void
}

class Conductor {
    -string nombre
    -number entregasRealizadas
    -Vehiculo vehiculo
    +mostrarDatos() void
}

Conductor --> Vehiculo : agregación
Paquete *-- Etiqueta : composición